<resources>
    <string name="app_name">SWE-Book</string>
    <string name="many_people">

"Many people, myself among them, feel better at the mere sight of a book"
</string>
    <string name="geather">

Geather
</string>
    <string name="menu">

Menu
</string>
    <string name="you_will_fi">

You will find all books        for your study
</string>
    <!-- strings.xml -->
    <string name="daily_study">

Daily study workflow books\nStudy Resources
</string>
    <string name="semester_1">

Semester-1
</string>
    <string name="computer_fu">

Computer Fundamental
</string>
    <string name="introductio">

Introduction to software engineering
</string>
    <string name="physics_wit">

Physics with lab
</string>
    <string name="download_Pdf">Download pdf</string>
    <string name="download_Doc">Download Doc</string>
    <string name="download_zip">Download Zip</string>
    <string name="download_video">Download Video</string>
    <string name="download_mp3">Download MP3</string>
    <string name="openFolder">Open Downloaded Folder</string>
    <string name="downloadStarted">Download Started…</string>
    <string name="downloadCompleted">Download Completed…</string>
    <string name="downloadFailed">Download Failed…</string>
    <string name="downloadAgain">Download Again</string>
    <string name="ap_name">MarshMallow Permissions Demo</string>
    <string name="storage">Storage</string>
    <string name="sms">SMS</string>
    <string name="contacts">Contacts</string>
    <string name="location">Location</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

</resources>
