<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#F6F6F6"
    tools:context=".Semester1">

    <include layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="303dp">

            <RelativeLayout
                android:id="@+id/s1box1"
                android:layout_width="match_parent"
                android:layout_height="271dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="2dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/semester1"
                android:clickable="true"
                android:elevation="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent">


                <TextView
                    android:id="@+id/s1cf"
                    android:layout_width="277dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="29dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/computer_fu"
                    android:textAppearance="@style/semester_1"
                    android:textColor="#6218FE"
                    android:textSize="30sp"

                    tools:layout_editor_absoluteX="26dp"
                    tools:layout_editor_absoluteY="300dp" />

                <Button
                    android:id="@+id/scbook1"
                    android:layout_width="152dp"
                    android:layout_height="38dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/bookbtn"
                    android:elevation="4dp"
                    android:text="Book-1" />


                <Button
                    android:id="@+id/scbook2"
                    android:layout_width="124dp"
                    android:layout_height="38dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignTop="@+id/scbook3"
                    android:layout_marginEnd="22dp"
                    android:background="@drawable/bookbtn2"
                    android:elevation="4dp"
                    android:text="Book-3"
                    android:textAlignment="center" />

                <Button
                    android:id="@+id/scbook3"
                    android:layout_width="135dp"
                    android:layout_height="38dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignStart="@+id/s1cf"
                    android:layout_marginBottom="58dp"
                    android:background="@drawable/bookbtn3"
                    android:elevation="4dp"
                    android:text="Book-2"
                    android:textAlignment="center" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/pybox"
                android:layout_width="match_parent"
                android:layout_height="203dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="2dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/semester1"
                android:clickable="true"
                android:elevation="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent">


                <TextView
                    android:id="@+id/pytittle"
                    android:layout_width="277dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="29dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/physics_wit"
                    android:textAppearance="@style/semester_1"
                    android:textColor="#6218FE"
                    android:textSize="30sp"

                    tools:layout_editor_absoluteX="26dp"
                    tools:layout_editor_absoluteY="300dp" />

                <Button
                    android:id="@+id/pbook1"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginBottom="63dp"
                    android:layout_marginStart="22dp"
                    android:background="@drawable/bookbtn"
                    android:elevation="4dp"
                    android:text="Book-1"
                    android:textAlignment="center" />

                <Button
                    android:id="@+id/pbook2"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignTop="@+id/pbook1"
                    android:layout_marginEnd="22dp"
                    android:background="@drawable/bookbtn2"
                    android:elevation="4dp"
                    android:text="Book-3"
                    android:textAlignment="center" />

                <Button
                    android:id="@+id/pbook3"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:layout_alignTop="@+id/pbook1"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/bookbtn3"
                    android:elevation="4dp"
                    android:text="Book-2"
                    android:textAlignment="center" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/introbox"
                android:layout_width="match_parent"
                android:layout_height="223dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="100dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/semester1"
                android:clickable="true"
                android:elevation="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent">


                <TextView
                    android:id="@+id/introTi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="29dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/introductio"
                    android:textAppearance="@style/semester_1"
                    android:textColor="#6218FE"
                    android:textSize="30sp"

                    tools:layout_editor_absoluteX="26dp"
                    tools:layout_editor_absoluteY="300dp" />

                <Button
                    android:id="@+id/ibook1"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginBottom="63dp"
                    android:layout_marginStart="22dp"
                    android:background="@drawable/bookbtn"
                    android:elevation="4dp"
                    android:text="Book-1"
                    android:textAlignment="center" />

                <Button
                    android:id="@+id/ibook2"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignTop="@+id/ibook1"
                    android:layout_marginEnd="22dp"
                    android:background="@drawable/bookbtn2"
                    android:elevation="4dp"
                    android:text="Book-3"
                    android:textAlignment="center" />

                <Button
                    android:id="@+id/ibook3"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:layout_alignTop="@+id/ibook1"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/bookbtn3"
                    android:elevation="4dp"
                    android:text="Book-2"
                    android:textAlignment="center"
                    tools:ignore="UnknownId" />


            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>